...
    android:id="@+id/navigation_graph"
    app:startDestination="@id/credentialsListFragment">

    <fragment
        android:id="@+id/shareCredentialsFragment"
        android:name="com.ul.ims.gmdl.fragment.ShareCredentialsFragment"
        android:label="@string/fragment_share_mdl_title"
        tools:layout="@layout/fragment_share_credentials">
        <action
            android:id="@+id/action_shareCredentialsFragment_to_credentialsListFragment"
            app:destination="@id/credentialsListFragment" />
    </fragment>
    <fragment
...
