...
    <string name="app_name">mDL App Holder</string>
    <string name="toast_not_implemented_text">Not Implemented yet!</string>
    <string name="fragment_credentials_list">mDL Application</string>
    <string name="fragment_share_mdl_title">Share mDL Information</string>
    <string name="qrcode_label_text">Scan QR code or NFC tap using an mDL verifier application</string>
    <string name="qrcode_img_content_description">QrCode to share mDL Information</string>
    <string name="ble_disabled_txt">BLE Should be enabled in order to transfer data</string>
    <string name="wifi_disabled_txt">Wifi Should be enabled in order to transfer data</string>
    <string name="location_permission_btn">Grant Location Permission</string>
    <string name="enable_ble_btn">Enable BLE</string>
    <string name="location_permission_txt">Location Permission must be granted in order to
        transfer data via BLE
    </string>
...
    <string name="bio_auth_failed">User authentication has failed</string>
    <string name="fingerprint_removed_error">Biometric Authentication Error</string>
    <string name="fingerprint_removed_error_desc">Fingerprint was removed from the device so the credential cannot be shared anymore.</string>
    <string name="txt_pre_approvals_label">Pre-Approvals</string>
    <string name="swt_age_attestation">Age Attestations</string>
    <string name="swt_authorized_readers">Authorized Readers</string>
    <string name="btn_share_mdl">Share mDL</string>
    <string name="txt_transfer_method_label">Transfer Method</string>
    <string name="toast_wifi_not_supported_device">Wi-Fi Aware is not supported by the device</string>
    <string name="toast_wifi_not_supported_os">Wi-Fi Aware is not supported by the OS</string>
    <string name="alert_transfer_complete_text">Transfer is finished.</string>
    <string name="alert_transfer_complete_title">Transfer Complete</string>
    <string name="toast_press_back_twice">Tap back button again to exit</string>
...
