...
            tools:text="Scan with the mDL verifier app"
            android:text="@string/qrcode_label_text" style="@style/TxtTitleStyle" android:layout_marginTop="50dp"
            android:visibility="@{safeUnbox(vm.nfcIconVisibility)}"/>
        <TextView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:id="@+id/permission_denied_txt" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp"
            android:visibility="@{safeUnbox(vm.permissionRequestVisibility)}"
            android:text="@{vm.permissionRequestText}" android:gravity="center"/>
        <Button
            android:text="@string/enable_ble_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_req_enable_ble" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/permission_denied_txt" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="@{safeUnbox(vm.btnEnableBtVisibility)}"
            android:onClick="@{fragment::requestToTurnOnBle}"/>
        <Button
...
