<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.ul.ims.gmdl.reader.fragment.ScanDeviceEngagementFragment" />

        <variable
            name="vm"
            type="com.ul.ims.gmdl.reader.viewmodel.ScanDeviceEngagementViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_scan_qrcode_label"
                style="@style/TxtTitleStyle"
                android:text="@string/txt_scan_device_engagement_label"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/qrcode_scan_view"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:autoFocusButtonVisible="false"
                app:flashButtonVisible="false"
                app:frameAspectRatioHeight="1"
                app:frameAspectRatioWidth="1"
                app:frameColor="@android:color/white"
                app:frameCornersRadius="0dp"
                app:frameCornersSize="50dp"
                app:frameSize="0.85"
                app:frameThickness="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_scan_qrcode_label"
                app:maskColor="#77000000" />

            <TextView
                android:id="@+id/txt_data_request_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_data_request_label"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qrcode_scan_view" />

            <Spinner
                android:id="@+id/spn_data_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_data_request_label" />

            <TextView
                android:id="@+id/txt_options_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_options_label"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spn_data_request" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swt_intent_retain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/swt_intent_retain"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_options_label" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swt_reader_authentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="24dp"
                android:text="@string/swt_reader_authentication"
                android:visibility="@{safeUnbox(vm.notPermissionVisibility)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/swt_intent_retain" />

            <TextView
                android:id="@+id/txt_explanation_camera_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:gravity="center"
                android:text="@string/txt_camera_permission_explanation"
                android:textSize="18sp"
                android:visibility="@{safeUnbox(vm.permissionVisibility)}"
                app:layout_constraintBottom_toTopOf="@id/btn_req_enable_ble"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <Button
                android:id="@+id/btn_req_enable_ble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btn_grant_camera_permission"
                android:visibility="@{safeUnbox(vm.permissionVisibility)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_explanation_camera_permission"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>