...
    <string name="txt_share_data_title_label">mDL Data Share Status</string>
    <string name="invalid_de_error_msg">Invalid Device Engagement</string>
    <string name="invalid_de_error_title">mDL QrCode or NFC Tag Error</string>
    <string name="response_error">Response Error</string>
    <string name="response_errors_details">Response Error. Please check logs.</string>
    <string name="connection_setup_error">Connection Setup Error</string>
    <string name="verifier_request_dialog">Please select what you\'d like to request from the Holder
    </string>
    <string name="family_name">Family Name</string>
    <string name="given_name">Given Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="validity_date">Validity Date</string>
    <string name="date_of_issue">Date of Issue</string>
...
